--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row text-center">
         <h2>BMGT 301</h2>
         <h3>Web Development</h3>
-        <a class="btn btn-primary" href="#https://www.linkedin.com/in/noahbfoster/" role="button">Visit this cool website</a>
+        <a class="btn btn-primary" href="http://www.linkedin.com/in/noahbfoster/" role="button">Visit this cool website</a>
       </div>
     </div>
   </section>
